# dag-workflow-engine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dag_engine_lite.py  pyproject.toml
dag_engine/: __init__.py  cli.py  conditions.py  engine.py  executor.py  loader.py  models.py
examples/: approval_workflow.yaml  hermes_diagnosis.yaml  simple_check.yaml
tests/: test_engine.py
