[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dag-workflow-engine"
version = "1.0.0"
description = "Lightweight DAG workflow engine — topological sort, parallel execution, approval gates, conditional branching, cascading skip"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
dag-engine = "dag_engine.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
